<resources>
    <string name="app_name" translatable="false">Food You</string>
    <string name="widget_calories_title">Kalorien</string>
    <string name="widget_calories_eaten">Gegessen</string>
    <string name="widget_calories_burned">Verbrannt</string>
    <string name="widget_calories_left">Übrig</string>
    <string name="widget_calories_left_lowercase">übrig</string>
    <string name="widget_calories_steps_format">%1$s Schritte</string>
    <string name="widget_calories_today_format">Heute, %1$s</string>
    <string name="widget_calories_normal">Normal</string>
    <string name="widget_calories_optimized">Optimiert</string>
    <string name="widget_calories_diet">Diät</string>
    <string name="widget_calories_diet_disabled">Kein Defizit gesetzt</string>
    <string name="widget_calories_unit_kcal">kcal</string>
    <string name="widget_calories_placeholder">--</string>
    <string name="widget_calories_kcal">%1$d kcal</string>
    <string name="widget_calories_no_value">-- kcal</string>
    <string name="widget_calories_over">Zu viel</string>
    <string name="widget_calories_over_lowercase">zu viel</string>
    <string name="widget_calorie_ring_title">Kalorien-Ring</string>
    <string name="widget_calorie_ring_description">Übrige Kalorien als Ring mit Optimiert- und Diät-Fortschritt</string>
    <string name="widget_calorie_ring_ring_description">%1$s von %2$s kcal gegessen, %3$s übrig</string>
    <string name="shortcut_quick_capture_camera_short">Foto</string>
    <string name="shortcut_quick_capture_camera_long">Foto-Schnellerfassung</string>
    <string name="shortcut_scan_barcode_short">Barcode</string>
    <string name="shortcut_scan_barcode_long">Barcode scannen</string>
</resources>
