<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_widget_utensils_circle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="18dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/widget_calories_eaten"
            android:textColor="@color/widget_calories_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/widget_calories_eaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/widget_calories_placeholder"
            android:textColor="@color/widget_calories_blue"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:includeFontPadding="false"
            android:text="@string/widget_calories_unit_kcal"
            android:textColor="@color/widget_calories_text"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
